Changelog file for Redirector component.

Redirector 2.0.7
====================================
- Fixed: contexts combo vs resources list, to filter resources that only belongs to selected context
- Fixed: tracking URI changes, only when setting "redirector.track_uri_updates" is enabled (true, 1, yes, y.. etc.)

Redirector 2.0.6
====================================
- New feature: [#31] Add a "View Redirect" option
- Fixed: [#33] Double slashes in redirect
- Fixed: [#43] Cannot set redirect for an existing, unpublished Resource (uri)
- Fixed: [#44] Undefined lexicon: redirect_err_ae_resource
- Fixed: [#47] Support for MODX link tags and prepend whole site-url
- Fixed: [#48] Problems with cyrillic URLs
- Fixed: Manager UI and fixed selecting a target resource URI parsing
- Fixed: [#24] [#26] [#32] [#46] Added senseless where statement to the REGEX where statement, to avoid xPDO errors
- Fixed: new/update redirect resource box margin set to 0.
- [#23] Fixed: redirect raw data import doesn't work

Redirector 2.0.5
====================================
- Fixed: plugin not checking URL extension any more, it should redirect based on whole URL data.
- Fixed: [#20] look a like patterns working as expected, regex pattern not checked at once.
- New feature: tracks the number of times a redirect has been triggered. Also first and last date/time are registered.

Redirector 2.0.4
====================================
- Fixed: entering and checking MODX link tags
- Fixed: parsed full urls are now got validated by PHP get_headers()
- Fixed: entering regex targets starting with '$' sign to be valid

Redirector 2.0.3
====================================
- New feature: including (relative) file support for redirection
- Fixed: using the right setting key in the Redirector plugin
- Fixed: broken unsinstall tables without having db manager instance
- Updated Russian translation (Thanks to @danyaPostfactum)
- Updated Frensch translation (Thanks to @rtripault)

Redirector 2.0.2