@@ -30,6 +30,22 @@ class ResourcesGetListProcessor extends modObjectGetListProcessor {
         $arr = $object->toArray();
         $arr['pagetitle'] .= ' ('.$object->get('context_key').', '.$object->get('id').')';
 
+        // figure out if resource is a site-start resource
+        $siteStart = $this->modx->getObject('modSystemSetting', array(
+            'key' => 'site_start',
+            'value' => $object->get('id'),
+        ));
+        if (empty($siteStart)) {
+
+            $siteStart = $this->modx->getObject('modContextSetting', array(
+                'key' => 'site_start',
+                'value' => $object->get('id'),
+                'context_key' => $object->get('context_key'),
+            ));
+        }
+
+        $arr['site_start'] = (!empty($siteStart) && is_object($siteStart)) ? true : false;
+
         return $arr;
     }
 }
